# flashSmith

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: aminoacids.csv  calculus.csv
flashsmith/: __init__.py  builder.py  flashsmith.py  models.py  utils.py  validator.py
