```toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flashsmith"
version = "0.1.0"
description = "Build Anki decks from CSV files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "genanki>=0.13.0",
  "pandas>=2.0.0",
  "pytest>=8.0.0"
]

[project.scripts]
flashsmith = "flashsmith.flashsmith:main"
```
